feat: Trigger Lucene indexing on hitting refresh button on /index. General refactor to handle null values.
* luceneIndexService now being triggered if github fetch fails. This is neccessary to handle local only files if the user dont want to use their remote.

* Lucene indexing now triggered upon refreshing gurka files on index page. Logging now works on index.cs

* Initialize and variables and fix misc null warnings.

* Handle rawFilePath being null.

* Dockerfile and appsettings

* roll back some of my refactors to fix the link logic

--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -9,7 +9,7 @@ Layout = "~/Pages/Shared/_FeaturesLayout.cshtml";
 
 var rawFilePath = Model.SelectedFeature.FilePath;
 var filePath = rawFilePath.StartsWith("/") ? rawFilePath.Replace("/", "") :
-rawFilePath.Replace("../", "");
+    rawFilePath.Replace("../", "");
 filePath = filePath.Replace(" ", "");
 
 string productName = Model.ProductName;
@@ -322,7 +322,7 @@ Product = new List<string> { productName }
                         .ToArray();
 
                         // Use the code-behind method to find the matching child scenario
-                        var matchingChild = Model.FindMatchingChild(childScenarios, headerCells, rowCells);
+                        var matchingChild = Model.FindMatchingChild(childScenarios, headerCells ?? Array.Empty<string>(), rowCells);
                         var status = matchingChild?.Status ?? Status.NotImplemented;
 
                         <tr>
