--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -152,6 +152,9 @@ Product = new List<string> { productName }
                     </ul>
                     }
                 </div>
+                <div class="scenario_rule_description scenario_description" id="scenario_rule_description">
+                    @Model.MarkdownStringToHtml(scenario.Description ?? string.Empty)
+                </div>
                 <h3 class="container_scenario_duration"><strong>Scenario duration:</strong> @scenario.TestDuration</h3>
                 @foreach (var step in scenario.Steps)
                 {
@@ -269,7 +272,9 @@ Product = new List<string> { productName }
 
                         @scenario.Name
                     </h2>
-
+                </div>
+                <div class="scenario_rule_description scenario_description" id="scenario_rule_description">
+                    @Model.MarkdownStringToHtml(scenario.Description ?? string.Empty)
                 </div>
                 <h3 class="container_scenario_duration"><strong>Scenario duration:</strong> @scenario.TestDuration</h3>
                 @foreach (var step in scenario.Steps)
