Fix Null pointer exception in FilePath when using home button on search result page.

--- a/source/VizGurka/Pages/Features/Features.cshtml
+++ b/source/VizGurka/Pages/Features/Features.cshtml
@@ -7,10 +7,15 @@
 @{
 Layout = "~/Pages/Shared/_FeaturesLayout.cshtml";
 
-var rawFilePath = Model.SelectedFeature.FilePath;
-var filePath = rawFilePath.StartsWith("/") ? rawFilePath.Replace("/", "") :
-    rawFilePath.Replace("../", "");
-filePath = filePath.Replace(" ", "");
+var filePath = "";
+
+@if(Model.SelectedFeature?.FilePath != null)
+    {
+        var rawFilePath = Model.SelectedFeature.FilePath;
+        filePath = rawFilePath.StartsWith("/") ? rawFilePath.Replace("/", "") :
+            rawFilePath.Replace("../", "");
+        filePath = filePath.Replace(" ", "");
+    }
 
 string productName = Model.ProductName;
 string baseUrl = Model.BaseUrl;
