Changed Title header

--- a/source/VizGurka/Pages/Shared/_AnalyticsLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_AnalyticsLayout.cshtml
@@ -6,11 +6,12 @@
 @inject Microsoft.AspNetCore.Mvc.Rendering.IHtmlHelper Html
 
 <head>
-    <link rel="stylesheet" href="~/css/sidemenu.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/sidemenu-queries.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/navbar-queries.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/analytics.css" asp-append-version="true" />
+    <title>@ViewData["Title"] @Model.ProductName - SpecGurka</title>
+    <link rel="stylesheet" href="~/css/sidemenu.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/sidemenu-queries.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/navbar-queries.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/analytics.css" asp-append-version="true"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
