--- a/source/VizGurka/Pages/Shared/_Layout.cshtml
+++ b/source/VizGurka/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>@ViewData["Title"] - VizGurka</title>
+  <title>SpecGurka</title>
   <link rel="icon" type="image/png" href="~/favgurka.png"/>
   <link rel="stylesheet" href="~/css/vizgurka.css" asp-append-version="true"/>
   <link rel="stylesheet" href="~/@(nameof(VizGurka)).styles.css">
