--- a/source/VizGurka/Pages/Shared/_SearchLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_SearchLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] @Model.ProductName - SpecGurka</title>
+    <title>@Model.ProductName - SpecGurka</title>
     <link rel="icon" type="image/png" href="~/favgurka.png" />
     <link rel="stylesheet" href="~/css/search.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/search-queries.css" asp-append-version="true" />
