--- a/source/VizGurka/Pages/Shared/_AnalyticsLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_AnalyticsLayout.cshtml
@@ -6,11 +6,12 @@
 @inject Microsoft.AspNetCore.Mvc.Rendering.IHtmlHelper Html
 
 <head>
-    <link rel="stylesheet" href="~/css/sidemenu.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/sidemenu-queries.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/navbar-queries.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/analytics.css" asp-append-version="true" />
+    <title>@Model.ProductName - SpecGurka</title>
+    <link rel="stylesheet" href="~/css/sidemenu.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/sidemenu-queries.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/navbar-queries.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/analytics.css" asp-append-version="true"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
@@ -81,8 +82,9 @@ private IHtmlContent RenderTree(Dictionary<string, object> tree, string parentId
     <nav class="navbar">
         <div class="navbar_top">
             <div class="image_title">
-            <img class="navbar_img" src="~/biggurka.png" alt="Gurka Logo" />
-            <h1 class="navbar_title">@Model.ProductName</h1>
+                <a href="/"><i class="fa fa-arrow-left"></i></a>
+                <img class="navbar_img" src="~/biggurka.png" alt="Gurka Logo"/>
+                <h1 class="navbar_title">@Model.ProductName</h1>
             </div>
             <div class="navbar_top_right">
                 <form id="searchForm" class="navbar_search_form" method="get" onsubmit="return handleSearch(event)">
@@ -113,7 +115,6 @@ private IHtmlContent RenderTree(Dictionary<string, object> tree, string parentId
                     asp-route-productName="@Model.ProductName" asp-route-id="@Model.Id">@Localizer["Features"]</a></li>
             <li class="navbar_links_link"><a class="@GetNavLinkClass("/analytics/analytics")"
                     asp-page="/analytics/analytics" asp-route-productName="@Model.ProductName">@Localizer["Analytics"]</a></li>
-            <li class="navbar_links_link"><a class="@GetNavLinkClass("/")" href="/">@Localizer["Change Product"]</a></li>
         </ul>
     </nav>
 
