--- a/source/VizGurka/wwwroot/css/feature-content.css
+++ b/source/VizGurka/wwwroot/css/feature-content.css
@@ -6,7 +6,7 @@
 
 .main-container {
   display: flex;
-  background-color: rgb(30, 33, 41);
+  background-color: #1E2129;
   max-width: 100vw;
   min-width: 100vw;
   max-height: 89vh;
@@ -26,7 +26,7 @@
   overflow-y: scroll;
   overflow-x: hidden;
   padding-bottom: 20px;
-  background-color: rgb(30, 33, 41);
+  background-color: #1E2129;
   scrollbar-width: thin;
   scrollbar-color: #3e4352 #14151a;
   position: relative;
@@ -45,7 +45,6 @@
   font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 1rem;
-  padding-top: 25px;
   position: relative;
   width: 100%;
   z-index: 100;
@@ -61,14 +60,14 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   z-index: 1000;
   background-color: rgba(30, 33, 41, 0.945);
-  padding: 10px 10px;
   padding-top: 60px;
+  padding-right: 20px;
 }
 
 .title_and_link h1 {
-  overflow: hidden;
   color: #f3f3f3;
 }
 
@@ -77,7 +76,7 @@
   gap: 10px;
   align-items: center;
   font-size: 2rem;
-  font-weight: 400;
+  font-weight: 300;
   width: fit-content;
   margin: 0;
   color: #E2E4E98F;
@@ -85,8 +84,6 @@
 
 .github_link i {
   font-size: 20px;
-  padding-right: 10px;
-  transform: 0.2s;
   
 }
 
@@ -95,8 +92,6 @@
   align-items: center;
   height: fit-content;
   width: fit-content;
-  padding: 0;
-  padding-right: 10px;
   padding-left: 20px;
   text-decoration: none;
   font-size: 0.8em;
@@ -107,20 +102,16 @@
   color: #2977ff;
 }
 
-
-
-.tag_list {
+.tag_and_rule_count {
   display: flex;
-  flex-wrap: wrap;
-  padding-left: 2vw;
-  margin-bottom: 1rem;
-  list-style: none;
-  border-radius: 10px;
+  flex-direction: row;
+  height: fit-content;
+}
+
+.tag_and_rule_count ul {
   margin: 0;
-  padding: 3px;
-  width: fit-content;
-  gap: 5px;
-  font-size: 1rem;
+  list-style: none;
+  padding: 0;
 }
 
 .tag_list.scenario_tags {
@@ -137,8 +128,6 @@
 .rule_tag_and_name {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  align-items: left;
   margin-top: 1rem;
 }
 
@@ -177,29 +166,25 @@
 }
 
 .scenario_tags{
+  display: flex;
+  list-style: none;
   margin-left: 0;
-}
-
-.smoke {
-  background-color: gray;
-  color: white;
-}
-
-.content_container_duration{
-  font-size: 0.9rem;
-  font-weight: 400;
-  margin-bottom: 1rem;
-  margin-top: 5px;
-  width: 95%;
-  color: #E2E4E9D1;
+  padding: 0;
+  padding-left: 2rem;
+  margin-top: 1rem;
 }
 
 .content_container_description p{
-  font-size: 1.1rem;
-  font-weight: 400;
+  font-size: 1rem;
+  font-weight: 300;
   margin-bottom: 1rem;
   width: 95%;
-  color: #E2E4E9D1;
+  color: white;
+}
+
+.content_container_description h2{
+  font-size: 1.4rem;
+  padding-left: 2rem;
 }
 
 .content_container_description a{
@@ -223,6 +208,26 @@
   color: #E2E4E9D1;
 }
 
+.scenario {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #767676;
+  border-radius: 10px;
+  margin-top: 8px;
+  background-color: #272A34;
+}
+
+.scenario h2 {
+  font-size: 1rem;
+  font-weight: 300;
+  color: white;
+}
+
+.scenario span {
+  font-weight: 600;
+  color: rgba(255, 255, 255, 0.7);
+}
+
 .container_scenarios_title{
   font-size: 1.7rem;
   font-weight: 400;
@@ -233,13 +238,6 @@
 .container_scenario_rule{
   font-size: 1.5rem;
   font-weight: 700;
-  padding-bottom: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  background-color: #14151a;
-  border-left: solid 1px #E2E4E98F;
-  border-right: solid 1px #E2E4E98F;
-  border-top: solid 1px #E2E4E98F;
   margin-top: 1.5rem;
 }
 
@@ -298,22 +296,22 @@
 }
 
 .container_scenario_step{
-  font-size: 1.1rem;
-  font-weight: 400;
+  font-size: 1rem;
+  font-weight: 300;
   margin-bottom: 1rem;
-  color: #E2E4E9D1;
-  padding-left: 4rem;
+  color: white;
+  padding-left: 2rem;
   max-width: 90%;
 }
 
 .container_scenario_step strong{
-  font-size: 1.1rem;
+  font-size: 1rem;
   margin-bottom: 1rem;
-  color: whitesmoke;
+  font-weight: 600;
+  color: white;
 }
 
 .container_scenario_table {
-  margin-left: 1rem;
   max-width: 100%;
   overflow-x: auto;
   display: block;
@@ -331,9 +329,10 @@
 .container_scenario_table th, 
 .container_scenario_table td {
   text-align: center;
+  font-weight: 300;
   min-width: fit-content;
-  padding: 5px;
-  color: whitesmoke;
+  padding: 8px;
+  color: white;
   background-color: #3e4352;
   white-space: nowrap;
   width: auto;
@@ -347,14 +346,10 @@
   padding-left: 1rem;
 }
 
-.container_scenario_duration strong{
-  font-weight: 400;
-  color: #E2E4E9D1;
-}
-
 .container_scenario_status_img{
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
+  padding-left: 1rem;
 }
 
 .container_title_status_img{
@@ -372,11 +367,6 @@
 .scenario_list {
   padding: 0;
   margin: 0;
-  border-left: solid 1px #E2E4E98F;
-  border-right: solid 1px #E2E4E98F;
-  border-bottom: solid 1px #E2E4E98F;
-  border-top: solid 1px #E2E4E98F;
-  background-color: #14151a;
   position: relative;
 }
 
@@ -398,11 +388,11 @@ hr {
   align-items: left;
   justify-content: left;
   max-width: 90%;
+  margin-bottom: 1rem;
 }
 
 .scenario_tag_and_name h2 {
   margin-bottom: 0;
-  padding-left: 1rem;
 }
 
 .rule-status-summary {
@@ -453,9 +443,14 @@ hr {
   flex-direction: row;
   justify-content: space-between;
   margin-top: 1rem;
+  padding-left: 2rem;
 }
 
 .rule_header_content h3 {
+  color: white;
+}
+
+.rule_header_content span {
   font-weight: bold;
 }
 
@@ -494,6 +489,21 @@ hr {
 
 .background_name {
   padding-bottom: 10px;
+}
+
+.background_scenario_step {
+  font-size: 1rem;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  padding-left: 2rem;
+}
+
+.background_scenario_step strong {
+  font-weight: bold;
+}
+
+.background {
+  margin-top: 1rem;
 }
 
 .scenario_description {
