--- a/source/VizGurka/wwwroot/css/table-of-contents.css
+++ b/source/VizGurka/wwwroot/css/table-of-contents.css
@@ -29,6 +29,8 @@
     margin-top: 0.5rem;
     max-width: 15vw;
     padding-bottom: 5px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .table_of_contents a {
