change px -> rem

--- a/source/VizGurka/wwwroot/css/feature-content.css
+++ b/source/VizGurka/wwwroot/css/feature-content.css
@@ -400,7 +400,7 @@ hr {
 
 .scenario_tag_and_name h2 {
   margin-bottom: 0;
-  padding-left: 12px;
+  padding-left: 0.7rem;
 }
 
 .rule-status-summary {
