--- a/source/VizGurka/Pages/Search/Search.cshtml
+++ b/source/VizGurka/Pages/Search/Search.cshtml
@@ -22,7 +22,7 @@
                 <input type="hidden" id="productName" name="productName" value="@Model.ProductName"/>
                 <i class="fa fa-search search-icon"></i>
                 <input class="navbar_search" type="text" id="navbar_search" name="query"
-                       placeholder="@Localizer["Features, Scenarios"]..."/>
+                       placeholder=@Model.Query>
             </div>
         </form>
     </nav>
