--- a/source/VizGurka/wwwroot/css/feature-content.css
+++ b/source/VizGurka/wwwroot/css/feature-content.css
@@ -180,13 +180,13 @@
   margin-bottom: 1rem;
   width: 95%;
   color: white;
-  padding-left: 2rem;
+  padding-left: 1rem;
   line-height: 1.5;
 }
 
 .content_container_description h2{
   font-size: 1.4rem;
-  padding-left: 2rem;
+  padding-left: 1rem;
 }
 
 .content_container_description a{
@@ -198,7 +198,7 @@
 }
 
 .content_container_description ul {
-  list-style-type: none;
+  list-style-type: disc;
   padding-left: 2rem;
 }
 
