Added total scenario count to analytics page. Localized Analytics.cshtml

--- a/source/VizGurka/Pages/Analytics/Analytics.cshtml
+++ b/source/VizGurka/Pages/Analytics/Analytics.cshtml
@@ -24,6 +24,7 @@
     else
     {
       <h1>@Localizer["Overall statistics for "] @Model.ProductName</h1>
+      <p>@Localizer["Total scenario count"]: <strong>@Model.GetTotalScenarioCount(Model.Features)</strong></p>
 
       <div class="performance-section">
         <h2>@Localizer["Slowest Features"]</h2>
